aku ngubah include sama CLI
includnya jadi pake "../" biar bisa ambil file header yang beda folder. sama ngubah sedikit tampilan cli.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
     "files.associations": {
-        "IGD.C": "cpp"
+        "IGD.C": "cpp",
+        "pasien.h": "c",
+        "antrian.h": "c",
+        "poli.h": "c",
+        "kunjungan.h": "c",
+        "rekammedis.h": "c",
+        "pembayaran.h": "c"
     }
 }
