nambah file buat tes percobaan running modul
nambahin file antrian_coba_coba. buat tes running

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "poli.h": "c",
         "kunjungan.h": "c",
         "rekammedis.h": "c",
-        "pembayaran.h": "c"
+        "pembayaran.h": "c",
+        "time.h": "c"
     }
 }
