--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "kunjungan.h": "c",
         "rekammedis.h": "c",
         "pembayaran.h": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "header.h": "c"
     }
 }
