--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "rekammedis.h": "c",
         "pembayaran.h": "c",
         "time.h": "c",
-        "random": "c"
+        "random": "c",
+        "queue.h": "c"
     }
 }
